Docs fixes for Alerts page (dark mode)
Fixes for issues spotted by Julian Oczkowski. (thanks!)

--- a/assets/css/_data-theme-dark.scss
+++ b/assets/css/_data-theme-dark.scss
@@ -72,6 +72,10 @@ html[data-theme="dark"] {
     font-size: inherit;
   }
 
+  .alert .alert-link {
+    color: #f1f1f6 !important;
+  }
+
   article table h3,
   article h2:first-of-type {
     margin-top: 1px !important;
